# MPI-Assignment--Calculate-Pi-

./: CMakeLists.txt  Test.cpp  entery.cpp  main.cpp
